# musikquadrupled

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: api.rs  error.rs  handler.rs  main.rs  router.rs  state.rs  token.rs  utils.rs
src/handlers/: data.rs  internal.rs  metadata.rs  mod.rs  share.rs
